--- a/client/my-app/src/components/Search.css
+++ b/client/my-app/src/components/Search.css
@@ -182,6 +182,7 @@
     font-size: 16px;
     padding-right: 40px; 
     box-sizing: border-box;
+    margin-right: 7px;
   }
 
   .search-button {
@@ -190,6 +191,7 @@
     border: none;
     padding: 15px 15px;
     margin-top: -2px;
+    margin-right: 12px;
   }
 
   .clear-icon {
